--- a/src/robot_model/param/costmap_common_params.yaml
+++ b/src/robot_model/param/costmap_common_params.yaml
@@ -1,8 +1,8 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
-#footprint: [[0.2, 0.1], [0., y1], ... [xn, yn]]
+#footprint: [[-0.2, -0.1], [0.2, -0.1], [0.2, 0.1], [-0.2, 0.1]]
 robot_radius: 0.2
-inflation_radius: 0.55
+inflation_radius: 0.25
 
 observation_sources: laser_scan_sensor point_cloud_sensor
 
